src/unit_tests/TypeChecker/fail/disp-formal1.cl
class Main { main() : Int {1}; };

class A {
    obj : A <- fun(new A);
    
    fun(obj : A) : SELF_TYPE { obj };
};